fix social icons when right aligned and scroll bar issue

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -811,7 +811,6 @@ ul.twitter {
     width: 100%;
 }
 
-
 .widget.profile .bk-profile-socialicons span a,
 .widget.socialicons span a  {
     -webkit-border-radius: 50px;
@@ -822,7 +821,8 @@ ul.twitter {
 
 .widget.profile .bk-profile-socialicons a {
     text-decoration: none;
-    text-indent: -9999px;
+    text-indent: 9999px;
+    overflow: hidden;
     white-space: nowrap;
 }
 
